kubernetes/003-istio/004-argo-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-server
  namespace: argocd
spec:
  parentRefs:
    - name: gateway
      sectionName: https
      namespace: istio-ingress
  hostnames:
    - argo.kars.tinnirello-livio.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
